# Prism-Edge

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  index.html  package-lock.json  package.json  server.ts  tsconfig.json  vercel.json  vite.config.ts
apps/android/: capacitor.config.ts  package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: index.html  manifest.json  package.json
apps/web/src/: App.tsx  ErrorBoundary.tsx  LoginPage.tsx  MembershipPage.tsx  PrismEdgeTerminal.tsx  index.css
apps/web/src/components/: ResetConfirmModal.tsx  ToastBanner.tsx
apps/web/src/config/: appDefaults.ts
apps/web/src/hooks/: useToast.ts  (+4 more)
data/samples/: btc_usdt_1h.json
docs/: api-contract.md  deployment.md  dgwm-adapter-contract.md  model-contract.md  msir-prism-dgwm-integration-review.md  system-breakdown.md  tempora-flip-design.md
scripts/: check-live.ps1  deploy-gcp.ps1  honest-backtest-002594.ts  map-domain-gcp.ps1
server/: analysisFallback.ts  apiRoutes.ts  backtestFallback.ts  binanceWs.ts  config.ts  frontend.ts  hsMembership.ts  marketFormat.ts  marketGateway.ts  marketParsers.ts  marketProviders.ts  math.ts  newsRoute.ts  rateLimiter.ts  types.ts  wsGateway.ts
services/api/: Dockerfile  requirements.txt
services/api/app/: main.py  schemas.py
services/quant/: dgwm_adapter.py  dgwm_runtime.py  model_registry.py
services/quant/msir_prism_quant/: engine.py
services/quant/prism_edge_quant/: engine.py  indicators.py  levels.py
(+13 files in other folders)
